# trace-reasoner

./: FINAL_REPORT.md  README.md  app.py  eval_aggregate.py  eval_baseline.py  eval_conditions.py  eval_nezha.py  make_figures.py  pyproject.toml  run_agent.py  run_local.py  run_multiagent.py  run_tot.py
figures/: architecture.mmd
tests/: test_beam.py  test_harness.py  test_local_client.py  test_mcp.py  test_metrics.py  test_multiagent.py  test_nezha.py  test_rag.py  test_react.py  test_safety.py  test_synthetic.py  test_tools.py  test_trace.py
trace_reasoner/: __init__.py  trace.py
trace_reasoner/agent/: __init__.py  anthropic_client.py  llm.py  local_client.py  mock.py  react.py  tools_runtime.py
trace_reasoner/baselines/: __init__.py  slowest_leaf.py
trace_reasoner/datasets/: __init__.py  base.py  nezha.py  synthetic.py
trace_reasoner/eval/: __init__.py  compare.py  harness.py  metrics.py
trace_reasoner/mcp/: __init__.py  __main__.py  server.py  session.py
trace_reasoner/multiagent/: __init__.py  beam.py  graph.py  mock.py  specialists.py  state.py  synthesizer.py
trace_reasoner/rag/: __init__.py  corpus.jsonl  retriever.py
trace_reasoner/safety/: __init__.py  evaluation.py  guardrails.py  router.py
trace_reasoner/tools/: __init__.py  baseline.py  walk_tree.py
